/*
 * Mantle Fabric 1.21.1 port build
 */

plugins {
    id 'fabric-loom' version '1.7-SNAPSHOT'
    id 'maven-publish'
}

repositories {
    mavenCentral()
    maven { url = "https://maven.fabricmc.net/" }
    maven { url = "https://maven.parchmentmc.org" }
    maven { url = "https://maven.shedaniel.me/" }
    maven { url = "https://maven.blamejared.com" }
    maven { url = "https://cursemaven.com" }
    maven { url = "https://mvn.devos.one/releases/" }
    maven { url = "https://mvn.devos.one/snapshots/" }
    maven { url = "https://maven.terraformersmc.com/releases/" }
    maven { url = "https://maven.ladysnake.org/releases" }
    maven { url = "https://jitpack.io" }
}

group = 'slimeknights.mantle'
base {
    archivesName = 'Mantle'
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

version = "${minecraft_version}-${mod_version}"

sourceSets {
    main {
        resources {
            srcDirs "src/generated/resources"
            exclude '.cache'
        }
    }
}

loom {
    accessWidenerPath = file("src/main/resources/mantle.accesswidener")
    runs {
        datagen {
            client()
            name "Data Generation"
            vmArg "-Dfabric-api.datagen"
            vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated/resources")}"
            vmArg "-Dfabric-api.datagen.modid=mantle"
            runDir "build/datagen"
        }
    }
}

processResources {
    Map<String, Object> properties = [
        "version": version,
        "minecraft_version": minecraft_version,
        "loader_version": loader_version,
        "fabric_version": fabric_version
    ]
    for (String module in port_lib_modules.split(",")) {
        properties.put("port_lib_${module}_version".toString(), "${port_lib_version}+${minecraft_version}")
    }

    properties.forEach((k, v) -> inputs.property(k, v))

    filesMatching("fabric.mod.json") {
        expand properties
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings loom.officialMojangMappings()

    modImplementation "net.fabricmc:fabric-loader:${loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"

    for (String module in port_lib_modules.split(",")) {
        modApi("io.github.fabricators_of_create.Porting-Lib:${module}:${port_lib_version}+${minecraft_version}")
    }

    api "com.electronwill.night-config:toml:3.6.7"
    api "com.electronwill.night-config:core:3.6.7"

    modCompileOnly("me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}")
    modRuntimeOnly("me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}") {
        exclude group: "net.fabricmc.fabric-api"
    }

    modImplementation("dev.architectury:architectury-fabric:${architectury_version}") {
        exclude group: "net.fabricmc.fabric-api"
    }

    modCompileOnly "mezz.jei:jei-${minecraft_version}-fabric:${jei_version}"
    modCompileOnly "com.terraformersmc:modmenu:${modmenu_version}"

    modApi "org.ladysnake.cardinal-components-api:cardinal-components-base:${cca_version}"
    modApi "org.ladysnake.cardinal-components-api:cardinal-components-entity:${cca_version}"
    include "org.ladysnake.cardinal-components-api:cardinal-components-base:${cca_version}"
    include "org.ladysnake.cardinal-components-api:cardinal-components-entity:${cca_version}"

    compileOnly "org.projectlombok:lombok:1.18.34"
    annotationProcessor "org.projectlombok:lombok:1.18.34"
    testCompileOnly "org.projectlombok:lombok:1.18.34"
    testAnnotationProcessor "org.projectlombok:lombok:1.18.34"

    implementation(include("com.google.code.findbugs:jsr305:3.0.2"))
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

jar {
    from('LICENSE') {
        rename { "${it}_${base.archivesName.get()}" }
    }
    manifest {
        attributes([
            "Specification-Title": "Mantle",
            "Specification-Vendor": "Slime Knights",
            "Specification-Version": "1",
            "Implementation-Title": project.name,
            "Implementation-Version": "${version}",
            "Implementation-Vendor": "Slime Knights",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}
